# nq

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  PROVENANCE.md  README.md  rust-toolchain.toml
.governor/: loop.json
coverage/: README.md  manifest
crates/nq/: Cargo.toml
crates/nq-db/: Cargo.toml  build.rs
crates/nq-db/examples/: sqlite_wal_state_consumer_fixture.rs
crates/nq-db/migrations/: 001_initial.sql  002_stable_views.sql  003_warning_lifecycle.sql  004_detector_refactor.sql  005_generation_digest.sql  006_metrics.sql  007_collector_constraint.sql  008_metrics_history.sql  009_history_policy.sql  010_series_dictionary.sql  011_notification_state.sql  012_saved_queries.sql  013_stock_checks.sql  014_more_stock_checks.sql  015_finding_lifecycle.sql  016_warnings_view_lifecycle.sql  017_log_observations.sql  018_finding_class.sql  019_fix_meta_checks.sql  020_state_versioning.sql  021_gc_and_suppression.sql  022_ack_ttl_and_dedup.sql  023_notification_history.sql  024_visibility_state.sql  025_finding_observations.sql  026_generation_lineage.sql  027_finding_diagnosis.sql  028_stability.sql  029_host_state.sql  030_regime_features.sql  031_zfs_witness.sql  032_zfs_vdev_errors_history.sql  033_basis_state.sql  034_smart_witness.sql  035_state_kind.sql  036_sqlite_mtimes.sql  037_smart_reallocated_history.sql  038_coverage_honesty.sql  039_admissibility_view.sql  040_node_unobservable.sql  (+24 more)
crates/nq-db/src/: component_testimony.rs  connect.rs  coverage_rules.rs  declarations.rs  detect.rs  digest.rs  disk_state_witness_projection.rs  dns.rs  dns_state_witness_projection.rs  export.rs  finding_meta.rs  fleet.rs  frame.rs  import.rs  ingest_state_witness_projection.rs  inquiry.rs  lib.rs  liveness.rs  liveness_export.rs  migrate.rs  notify.rs  nq_binary_mtime_state.rs  nq_evaluator_state.rs  preflight.rs  publish.rs  query.rs  regime.rs  retention.rs  service_state.rs  service_state_witness_projection.rs  snapshot.rs  source_retirement.rs  sqlite_wal_state.rs  sqlite_wal_state_witness_projection.rs  views.rs  witness_projection_support.rs
crates/nq-db/tests/: backup.rs  coverage_composition.rs  crash_atomicity.rs  declaration_overlay.rs  detector_fixtures.rs  durable_artifact_substrate_v1.rs  host_detail_view.rs  human_now_frame.rs  operator_docs_contract.rs  origin_mode_discriminator.rs  query_evil.rs  smoke.rs  sql_contract.rs  upgrade.rs
crates/nq-db/tests/fixtures/: README.md  expected_export_after_clean_ingest.jsonl  expected_export_after_stale_ingest.jsonl  sqlite_wal_state_v0_acceptance_receipt.json  synthetic_producer_import.json  synthetic_producer_stale.json  synthetic_producer_under_versioned.json  synthetic_producer_wrong_schema.json
crates/nq-monitor/: Cargo.toml
crates/nq-monitor/src/: artifact_registry.rs  cli.rs  declared_deny_probe.rs  declared_deny_transport.rs  gateway_path_probe.rs  gateway_path_transport.rs  inquiry.rs  kea_control.rs  lease_presence_probe.rs  lease_presence_transport.rs  lib.rs  main.rs  nq_evaluator_probe.rs  nq_sql_contract_state.rs  probe.rs  served_surface_registry.rs  smoke.rs  tls_cert_probe.rs  tls_cert_series.rs  tls_cert_transport.rs
crates/nq-monitor/src/cmd/: check.rs  collect.rs  drill.rs  emit_escalation.rs  findings.rs  fleet.rs  inquire.rs  intent.rs  liveness.rs  maintenance.rs  mod.rs  preflight.rs  probe.rs  query.rs  receipt.rs  serve.rs  smoke.rs  source.rs  validate_witness.rs  verify.rs
crates/nq-monitor/src/cmd/witness/: diff_scope.rs  git_status.rs  mod.rs  pytest.rs
crates/nq-monitor/src/collect/: logs.rs  mod.rs  prometheus.rs  sqlite_health.rs  sqlite_wal_probe.rs  zfs.rs
crates/nq-monitor/src/http/: mod.rs  query_api.rs  routes.rs
crates/nq-monitor/src/operator_surface/: mod.rs  preflight.rs
crates/nq-monitor/src/pull/: mod.rs
crates/nq-monitor/tests/: dashboard_ordering.rs  e2e.rs  header_summary.rs  html_escape.rs  operator_surface_seam.rs  posture_legend.rs  render_claim_boundaries.rs  tls_cert_live.rs
crates/nq-monitor/tests/fixtures/dns/: README.md  nodata_aaaa.hex  nxdomain_a.hex  ptr.hex  refused_a.hex  servfail_a.hex  success_a.hex  txt.hex
crates/nq-monitor/tests/fixtures/kea/: README.md  kea-leases4.csv  lease4_get_all.json
crates/nq-monitor/tests/fixtures/tls/: README.md  lab_leaf.pem
crates/nq-witness/: Cargo.toml
crates/nq-witness-api/: Cargo.toml
crates/nq-witness-api/src/: fixtures.rs  lib.rs
crates/nq-witness/src/: lib.rs  main.rs  server.rs
crates/nq-witness/src/collect/: gpu.rs  host.rs  host_bsd.rs  logs.rs  mod.rs  nq_binary.rs  services.rs  smart.rs  sqlite_wal_probe.rs  zfs.rs
crates/nq-witness/tests/: separability.rs
crates/nq/src/: cli.rs  lib.rs  main.rs  probe.rs  smoke.rs
crates/nq/src/cmd/: check.rs  findings.rs  fleet.rs  liveness.rs  maintenance.rs  mod.rs  preflight.rs  probe.rs  publish.rs  query.rs  receipt.rs  sentinel.rs  serve.rs  smoke.rs  validate_witness.rs  verify.rs
crates/nq/src/cmd/witness/: diff_scope.rs  git_status.rs  mod.rs  pytest.rs
crates/nq/src/collect/: host.rs  logs.rs  mod.rs  nq_binary.rs  prometheus.rs  services.rs  smart.rs  sqlite_health.rs  sqlite_wal_probe.rs  zfs.rs
crates/nq/src/http/: mod.rs  routes.rs
crates/nq/src/pull/: mod.rs
crates/nq/tests/: dashboard_ordering.rs  e2e.rs  header_summary.rs  html_escape.rs
detections/: 2026-04-08-checkpoint-false-alarm.md  2026-04-08-hosting-skew.md  2026-04-08-labeler-decay.md
docs/: ARCHITECTURE_NOTES.md  CLAIM_ADMISSIBILITY_MATTERS.md  CLAIM_CATALOG.md  CLAIM_PREFLIGHT.md  CLAIM_PREFLIGHT_EXISTING_WITNESSES.md  CONSUMER_DRYRUN.md  DETECTOR_TAXONOMY.md  (+22 more)
(+353 files in other folders)
