[workspace]
members = [
    "crates/nq-core",
    "crates/nq-db",
    "crates/nq",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde-well-known", "formatting", "parsing", "macros"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled", "time", "hooks"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[profile.dev]
debug = 0
incremental = true
