[workspace]
members = [
    "crates/nq-core",
    "crates/nq-db",
    "crates/nq-witness-api",
    "crates/nq-witness",
    "crates/nq-monitor",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.2"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["serde-well-known", "formatting", "parsing", "macros"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled", "time", "hooks"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
# TLS-cert active-witness probe transport (slice 2b). rustls pinned to the
# `ring` provider already in the lockfile (via reqwest) to avoid pulling the
# heavier aws-lc-rs/cmake build. x509-parser uses the `time` crate, matching ours.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
x509-parser = "0.16"
# Bundled WebPKI trust anchors for chain validation (slice 2c). Bundled, not
# the OS trust store — keeps validation portable/deterministic.
webpki-roots = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[profile.dev]
debug = 0
incremental = true
