[package]
name = "nq-db"
edition.workspace = true
version.workspace = true

[dependencies]
nq-core = { path = "../nq-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
