[package]
name = "nq-monitor"
edition.workspace = true
version.workspace = true

[dependencies]
nq-core = { path = "../nq-core" }
nq-db = { path = "../nq-db" }
nq-witness = { path = "../nq-witness" }
nq-witness-api = { path = "../nq-witness-api" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
nq-witness = { path = "../nq-witness" }
