[package]
name = "nq-witness"
edition.workspace = true
version.workspace = true

[dependencies]
nq-core = { path = "../nq-core" }
nq-witness-api = { path = "../nq-witness-api" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
hostname = "0.4"
libc = "0.2"
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
